# hunter-sdk-service

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
src/hunter_sdk/: __init__.py  __main__.py  settings.py
src/hunter_sdk/api/: __init__.py  app.py  dependencies.py  schemas.py
src/hunter_sdk/api/routers/: __init__.py  verifications.py
src/hunter_sdk/migrations/: env.py
src/hunter_sdk/migrations/versions/: 0001_initial.py
src/hunter_sdk/sdk/: __init__.py  client.py  exceptions.py  models.py  transport.py
src/hunter_sdk/sdk/endpoints/: __init__.py  domain_search.py  email_finder.py  email_verifier.py
src/hunter_sdk/services/: __init__.py  verification.py
src/hunter_sdk/storage/: __init__.py  database.py  entities.py  orm.py
src/hunter_sdk/storage/repositories/: __init__.py  base.py  memory.py  postgres.py
tests/: __init__.py  conftest.py  test_api.py  test_domain_search.py  test_email_finder.py  test_email_verifier.py  test_memory_repository.py  test_sdk_client.py  test_transport.py  test_verification_service.py
