[project]
name = "hunter-sdk"
version = "0.1.0"
description = "Hunter.io SDK with FastAPI service layer and PostgreSQL storage"
requires-python = ">=3.11"
authors = [{name = "Yayko Nazarchuk", email = "nazarchukyayko@gmail.com"}]
readme = "README.md"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "asgi-lifespan>=2.1.0",
    "mypy>=1.8.0",
    "wemake-python-styleguide>=0.18.0",
    "flake8-bugbear",
    "flake8-bandit",
    "flake8-comprehensions",
    "flake8-commas",
    "flake8-quotes",
    "flake8-docstrings",
    "flake8-eradicate",
    "flake8-isort",
    "flake8-rst-docstrings",
    "flake8-string-format",
    "flake8-broken-line",
    "pep8-naming",
    "darglint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hunter_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
